networking/traefik/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata: { name: scholarpath-rate-limit, namespace: scholarpath }
spec: { rateLimit: { average: 200, burst: 400, sourceCriterion: { ipStrategy: { depth: 1 } } } }
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata: { name: scholarpath-headers, namespace: scholarpath }
spec:
  headers:
    customRequestHeaders: { X-Forwarded-Proto: https }
    contentSecurityPolicy: "default-src 'self'"
    frameDeny: true
    sslRedirect: true
    stsSeconds: 31536000
